<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarType"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/type_dif"
            app:titleTextColor="@color/colorBackground"></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_weight="3"
            android:text="@string/difficulty"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/i" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorLine"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    app:srcCompat="@drawable/lite" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="30dp"
                    android:text="@string/lite"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewMedium"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    app:srcCompat="@drawable/medium" />

                <TextView
                    android:id="@+id/textViewMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="30dp"
                    android:text="@string/medium"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewStrong"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    app:srcCompat="@drawable/strong" />

                <TextView
                    android:id="@+id/textViewStrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="30dp"
                    android:text="@string/strong"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroupDif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:animateLayoutChanges="true"
            android:layoutMode="opticalBounds"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioLite"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:checked="true"
                android:gravity="center_vertical" />

            <RadioButton
                android:id="@+id/radioMedium"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <RadioButton
                android:id="@+id/radioStrong"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_vertical" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTypeOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_weight="3"
            android:text="@string/typeOff"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageViewI"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/i" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorLine"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewmath"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left|center_vertical"
                    app:srcCompat="@drawable/plus_math" />

                <TextView
                    android:id="@+id/textViewMath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/math"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewPoints"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left|center_vertical"
                    app:srcCompat="@drawable/points" />

                <TextView
                    android:id="@+id/textViewPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/points"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewPointsMath"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left|center_vertical"
                    app:srcCompat="@drawable/points_and_plus" />

                <TextView
                    android:id="@+id/textViewPointsMath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/points_math"
                    android:textSize="16sp" />


            </LinearLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroupTypeOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioMath"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp" />

            <RadioButton
                android:id="@+id/radioPoints"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:allowUndo="false"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp" />

            <RadioButton
                android:id="@+id/radioPointsMath"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:allowUndo="false"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp" />
        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorLine"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/textViewSaveType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:text="@string/text_save" />

</LinearLayout>